# ovrtx

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.agents/skills/: README.md
.github/workflows/: docs.yml
docs/: .gitignore  Doxyfile  Makefile  conf.py  index.rst  make.bat
docs/_ext/: filtered_literalinclude.py
docs/c_api/: getting_started.rst  index.rst  practical_patterns.rst
docs/core/: application_flow.rst  async_status_errors.rst  renderer_configuration.rst
docs/examples/: c_material_editor.rst  c_minimal.rst  c_sensor_lidar.rst  c_sensor_radar.rst  c_status_queries.rst  c_vulkan_interop.rst  index.rst  python_minimal.rst  python_planet_system.rst  python_semantic_segmentation.rst  python_sensor_lidar.rst  python_sensor_radar.rst  python_status_queries.rst  python_tiled_rendering.rst
docs/python_api/: getting_started.rst  index.rst
docs/scene/: attribute_bindings.rst  attribute_mapping.rst  attributes.rst  cloning.rst  loading_usd.rst  material_binding.rst  picking.rst  semantic_labels.rst  stage_queries.rst  transforms.rst
docs/sensors/: cameras.rst  configuration.rst  lidar.rst  nonvisual.rst  nonvisual_materials.rst  pointclouds.rst  radar.rst  sensor_outputs.rst
examples/: README.md
examples/c/: .gitignore  CMakeLists.txt
examples/c/cmake/: ovrtx.cmake
examples/c/material-editor/: CLAUDE.md  CMakeLists.txt  README.md  run-material-editor.bat.in
examples/c/material-editor/data/: material-editor-ball.usda  studio_kontrast_04.exr
examples/c/material-editor/img/: .gitignore
examples/c/material-editor/render-test/: main.py  pyproject.toml
examples/c/material-editor/src/: main.cpp  main_window.cpp  main_window.hpp  material_list_widget.cpp  material_list_widget.hpp  node_graph_widget.cpp  node_graph_widget.hpp  ovrtx_engine.cpp  ovrtx_engine.hpp  property_panel_widget.cpp  property_panel_widget.hpp  usd_material_graph.cpp  usd_material_graph.hpp  viewport_widget.cpp  viewport_widget.hpp
examples/c/minimal/: CMakeLists.txt  README.md  main.cpp  torus-plane.usda
examples/c/sensors/: CMakeLists.txt
examples/c/sensors/lidar/: CMakeLists.txt  README.md  lidar_example.usda  main.cpp
examples/c/sensors/radar/: CMakeLists.txt  README.md  main.cpp  radar_example.usda
examples/c/status-queries/: CMakeLists.txt  README.md  main.cpp
examples/c/vulkan-interop/: .clangd  .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  README.md  torus-plane.usda
examples/c/vulkan-interop/shaders/: fullscreen.frag  fullscreen.vert  overlay.frag  overlay.vert
examples/c/vulkan-interop/src/: main.cpp
examples/c/vulkan-interop/src/camera/: orbit_camera.cpp  orbit_camera.hpp
examples/c/vulkan-interop/src/cuda/: cuda_kernel.cpp  cuda_kernel.hpp
examples/c/vulkan-interop/src/glsl/: spirv_loader.hpp
examples/c/vulkan-interop/src/vk/: command_buffer.cpp  command_buffer.hpp  sampled_image.cpp  sampled_image.hpp  shader.cpp  shader.hpp  vulkan_context.cpp  vulkan_context.hpp
examples/c/vulkan-interop/tests/: test_context.cpp  test_cuda_interop.cpp  test_cuda_kernel.cpp  test_descriptors.cpp  test_rendering.cpp  validation_tracker.cpp  validation_tracker.hpp
examples/python/: .gitignore
examples/python/minimal/: README.md  main.py  pyproject.toml
examples/python/planet-system/: README.md  main.py  pyproject.toml
examples/python/semantic-segmentation/: README.md  main.py  ovrtx-robot-lineup.usda  pyproject.toml
examples/python/sensors/lidar/: README.md  lidar_example.usda  main.py  pyproject.toml
img/: example-material-editor.avif  example-semantic-segmentation.avif  example-sensor-lidar.avif  example-sensor-radar.avif  example-tiled-rendering.avif
include/ovrtx/: ovrtx.h  ovrtx_attributes.h  ovrtx_config.h  ovrtx_types.h
include/ovx/: types.h
ovrtx/: .gitignore  __init__.py
ovrtx/_src/: bindings.py  dlpack.py  math.py  renderer.py  types.py
ovrtx/tests/: README.md  conftest.py  requirements.txt  test_ovrtx.py
python/: pyproject.toml
python/ovrtx/: __init__.py  math.py
skills/: README.md
skills/application-flow/: SKILLS.md
skills/async-operations/: SKILLS.md
skills/attribute-bindings/: SKILL.md  SKILLS.md
skills/cloning-prims/: SKILL.md  SKILLS.md
skills/cuda-interop/: SKILLS.md
skills/error-handling/: SKILLS.md
skills/loading-usd/: SKILL.md  SKILLS.md
skills/mapping-attributes/: SKILLS.md
skills/picking-selection/: SKILL.md
skills/project-setup-c/: SKILLS.md
skills/project-setup-python/: SKILLS.md
skills/reading-render-output/: SKILLS.md
skills/reading-sensor-pointclouds/: SKILL.md
tests/: README.md  conftest.py  requirements.txt  test_inline_skill_snippets.py  test_ovrtx.py
tests/data/: cube.usda  (+9 more)
tests/docs/c/: .gitignore  CMakeLists.txt  helpers.h  main.cpp  run_sensor_example_check.cmake  run_tests.bat  run_tests.sh  test_all_attributes.cpp  test_attribute_bindings.cpp  test_attribute_helpers.cpp  test_attribute_read.cpp  test_attribute_shapes.cpp  test_base.cpp  test_camera_aovs.cpp  test_camera_sensors.cpp  test_error_handling.cpp  test_logging.cpp  test_picking_selection.cpp  test_semantic_labels.cpp  test_sensor_configuration.cpp  test_stage_mutation.cpp  test_stage_query.cpp  test_support_api.cpp  test_transform_helpers.cpp
tests/docs/python/: conftest.py  pyproject.toml  test_all_attributes.py  test_attribute_bindings.py  test_attribute_read.py  test_attribute_shapes.py  test_base.py  test_camera_aovs.py  test_camera_sensors.py  test_error_handling.py  test_picking_selection.py  test_render_modes.py  test_semantic_labels.py  test_sensor_configuration.py  test_sensor_examples.py  test_stage_mutation.py  test_stage_query.py  test_support_api.py
tests/docs/usd/: conftest.py  pyproject.toml  test_camera_sensors_usda.py  test_inline_sublayers_usda.py  test_semantic_labels_usda.py  test_sensor_config_usda.py  test_usd_python_examples.py
tests/docs/usd/data/: camera_sensor_render_product.usda  inline_sublayers_camera_renderproduct.usda  minimal_render_product.usda  multi_render_product_shared_vars.usda  semantic_label_base.usda  semantic_label_overrides.usda
(+94 files in other folders)
