[project]
name = "minimal"
version = "0.1.0"
description = "Minimal ovrtx Python example"
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "numpy==2.2.6; python_version < '3.14'",
    "numpy==2.4.2; python_version >= '3.14'",
    "ovrtx==0.1.0.529",
    "pillow==12.1.1",
]

