[project]
name = "planet-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "numpy==2.2.6; python_version < '3.14'",
    "numpy==2.4.2; python_version >= '3.14'",
    "ovrtx==0.1.0.529",
    "rerun-sdk==0.29.0",
    "warp-lang==1.12.0.dev20260211",
]


