[project]
name = "semantic-segmentation"
version = "0.2.0"
description = "Render robot-lineup semantic segmentation and stream labeled results to Rerun"
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "numpy==2.2.6",
    "ovrtx==0.3.0.312915",
    "pillow==12.1.1",
    "rerun-sdk==0.29.0",
]

[tool.uv]
environments = [
    "sys_platform == 'linux' and platform_machine == 'x86_64'",
    "sys_platform == 'linux' and platform_machine == 'aarch64'",
]
required-environments = [
    "sys_platform == 'linux' and platform_machine == 'x86_64'",
    "sys_platform == 'linux' and platform_machine == 'aarch64'",
]

