[project]
name = "ovrtx-docs-tests-python"
version = "0.1.0"
description = "Documentation tests that use ovrtx (GPU required)"
requires-python = ">=3.10,<3.14"
dependencies = [
    "numpy==2.2.6",
    "ovrtx==0.3.0.312915",
    "pillow==12.1.1",
    "pytest==9.0.2",
    "warp-lang==1.12.1",
]

[tool.uv]
# Windows reports x86-64 as AMD64 in PEP 508 platform_machine markers.
# Wheel tags still use win_amd64; keep those concepts separate.
environments = [
    "sys_platform == 'linux' and platform_machine == 'x86_64'",
    "sys_platform == 'linux' and platform_machine == 'aarch64'",
    "sys_platform == 'win32' and platform_machine == 'AMD64'",
]
required-environments = [
    "sys_platform == 'linux' and platform_machine == 'x86_64'",
    "sys_platform == 'linux' and platform_machine == 'aarch64'",
    "sys_platform == 'win32' and platform_machine == 'AMD64'",
]

