[project]
name = "ovrtx-docs-tests-usd"
version = "0.1.0"
description = "USDA validation tests for documentation (no GPU required)"
requires-python = ">=3.10,<3.14"
dependencies = [
    "pytest==9.0.2",
    "usd-core==26.3",
]

# aarch64 is intentionally omitted: usd-core has no aarch64 wheels, and CI
# (rendering/tools/ci/ci_utils.py) skips this suite on aarch64.
[tool.uv]
environments = [
    "sys_platform == 'linux' and platform_machine == 'x86_64'",
    "sys_platform == 'win32' and platform_machine == 'AMD64'",
]
required-environments = [
    "sys_platform == 'linux' and platform_machine == 'x86_64'",
    "sys_platform == 'win32' and platform_machine == 'AMD64'",
]
