[project]
name = "lidar"
version = "0.1.0"
description = "Lidar PointCloud ovrtx example with rerun visualization"
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "numpy==2.2.6",
    "ovrtx==0.3.0.312915",
    "rerun-sdk==0.29.0",
]

[tool.uv]
environments = [
    "sys_platform == 'linux' and platform_machine == 'x86_64'",
    "sys_platform == 'linux' and platform_machine == 'aarch64'",
    "sys_platform == 'win32' and platform_machine == 'AMD64'",
]
required-environments = [
    "sys_platform == 'linux' and platform_machine == 'x86_64'",
    "sys_platform == 'linux' and platform_machine == 'aarch64'",
    "sys_platform == 'win32' and platform_machine == 'AMD64'",
]

